# sources/api/openapi.yaml
@@ -642,6 +642,16 @@ paths:
         500:
           description: "Server error"
 
+  /actions/lockdown:
+    post:
+      summary: "Lockdown"
+      operationId: "lockdown"
+      responses:
+        204:
+          description: "Lockdown requested"
+        500:
+          description: "Server error"
+
   /actions/reboot:
     post:
       summary: "Reboot"
